objects/LLC_BI__CFG_ConfigValue__c.object
<CustomObject>
    <description>Configuration Values allow nCino to have different processes across different products in the system by allowing for a many-to-many relationship</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required. It is manually populated. It indicates the category of the configuration value. The combination of the category and the key is used to uniquely identify the configuration value.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Stage</fullName>
                    <default>true</default>
                    <label>Loan Stage</label>
                </value>
                <value>
                    <fullName>Loan Status</fullName>
                </value>
                <value>
                    <fullName>Deposit Stage</fullName>
                </value>
                <value>
                    <fullName>Deposit Status</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Change Memo</fullName>
                </value>
                <value>
                    <fullName>Change Product</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Document Manager</fullName>
                </value>
                <value>
                    <fullName>Renewal_Feature_Enabled</fullName>
                </value>
                <value>
                    <fullName>Relatives_To_Clone</fullName>
                </value>
                <value>
                    <fullName>Roles_For_Multi-Renewal_Delete</fullName>
                </value>
                <value>
                    <fullName>Delete_Versions_Allowed</fullName>
                </value>
                <value>
                    <fullName>Delete_Feature_Enabled</fullName>
                </value>
                <value>
                    <fullName>Renewal_Supported</fullName>
                </value>
                <value>
                    <fullName>Roles_For_Loan_Renewal</fullName>
                </value>
                <value>
                    <fullName>Renewal_Starting_Stage</fullName>
                </value>
                <value>
                    <fullName>Renewal_Starting_Status</fullName>
                </value>
                <value>
                    <fullName>Renewal_Name_Format</fullName>
                </value>
                <value>
                    <fullName>Renewal_Fields_To_Clone</fullName>
                </value>
                <value>
                    <fullName>Status_Renewal_Allowed</fullName>
                </value>
                <value>
                    <fullName>Stages_Renewal_Allowed</fullName>
                </value>
                <value>
                    <fullName>Entity_Check_Enabled</fullName>
                </value>
                <value>
                    <fullName>Modification_Name_Format</fullName>
                </value>
                <value>
                    <fullName>Original_Name_Format</fullName>
                </value>
                <value>
                    <fullName>Deal Facilities</fullName>
                </value>
                <value>
                    <fullName>Renewal_Status_Superceded_String</fullName>
                </value>
                <value>
                    <fullName>Renewal_Stage_Superceded_String</fullName>
                </value>
                <value>
                    <fullName>Renewal_Status_Deleted_String</fullName>
                </value>
                <value>
                    <fullName>Renewal_History_In_Progress_String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is manually populated. It describes the Config Value in more depth.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Key__c</fullName>
        <description>This field is required. It is manually populated. The combination of the category and the key is used to uniquely identify the configuration value.</description>
        <inlineHelpText>Any spaces in the Key&apos;s should be replaced with an underscore.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This field is required. It is manually populated. It indicates the value to be used within the nCino codebase for the configuration value.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__fieldValue__c</fullName>
        <description>This is a deprecated value due to it being too short. We added keyValue for longer values.</description>
        <label>fieldValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFG_ConfigValue</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Category__c</columns>
        <columns>LLC_BI__Key__c</columns>
        <columns>LLC_BI__fieldValue__c</columns>
        <columns>LLC_BI__lookupKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFG-CV{00000000}</displayFormat>
        <label>CFG_ConfigValue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFG_ConfigValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>